# kafka_practice

./: .gitignore  Dockerfile  consumer.py  producer.py  pyproject.toml  readme.md  requirements.txt  run.md  run.sh  stop.sh
libs/kafka_2.13-3.0.0/logs/: controller.log.2022-06-27-15  controller.log.2022-11-30-21  controller.log.2022-11-30-22  controller.log.2022-11-30-23  kafkaServer-gc.log.0.current  log-cleaner.log.2022-06-27-15  log-cleaner.log.2022-11-30-21  server.log.2022-06-27-15  server.log.2022-11-30-21  server.log.2022-11-30-22  state-change.log.2022-06-27-15  state-change.log.2022-11-30-21  state-change.log.2022-11-30-22  zookeeper-gc.log.0.current
